[gd_scene load_steps=7 format=3 uid="uid://cx12ws1kklag3"]

[ext_resource type="Script" path="res://levels/main_menu/main_menu.gd" id="1_3nomf"]
[ext_resource type="AudioStream" uid="uid://6gqlgt6s2qqx" path="res://audio/music/menu_theme.wav" id="1_eryre"]
[ext_resource type="FontFile" uid="uid://bgklaoa7xmnsh" path="res://fonts/SuperBrigade-xRoW0.otf" id="3_oaewf"]

[sub_resource type="Theme" id="Theme_ttm45"]
default_font = ExtResource("3_oaewf")

[sub_resource type="Theme" id="Theme_lns2j"]
default_font = ExtResource("3_oaewf")

[sub_resource type="Theme" id="Theme_jln4y"]
default_font = ExtResource("3_oaewf")

[node name="CanvasLayer" type="CanvasLayer"]

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1600.0
offset_bottom = 900.0
color = Color(0.94902, 0.654902, 0.317647, 1)

[node name="MainMenu" type="Control" parent="."]
visibility_layer = 1023
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3nomf")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="MainMenu"]
stream = ExtResource("1_eryre")
volume_db = -10.07
autoplay = true

[node name="MarginContainer" type="MarginContainer" parent="MainMenu"]
layout_mode = 0
offset_left = 413.0
offset_top = 492.0
offset_right = 1190.0
offset_bottom = 725.0
theme = SubResource("Theme_ttm45")

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/MarginContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_lns2j")
theme_override_font_sizes/font_size = 64
text = "Play
"

[node name="Options" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
visibility_layer = 1023
layout_mode = 2
theme = SubResource("Theme_lns2j")
theme_override_font_sizes/font_size = 64
text = "Options"

[node name="Exit" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_lns2j")
theme_override_font_sizes/font_size = 64
text = "Quit to Desktop"

[node name="Label" type="Label" parent="MainMenu"]
layout_mode = 0
offset_left = 39.0
offset_top = 111.0
offset_right = 1491.0
offset_bottom = 349.0
theme = SubResource("Theme_jln4y")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.262745, 0.392157, 0.792157, 1)
theme_override_constants/shadow_offset_x = 10
theme_override_constants/shadow_offset_y = 10
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 230
text = "FLY OUT
"

[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/PlayButton" to="MainMenu" method="_on_play_button_pressed"]
[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/Options" to="MainMenu" method="_on_options_pressed"]
[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/Exit" to="MainMenu" method="_on_exit_pressed"]
